syntax = "proto3";
package proto;
option go_package = "./proto";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequest {
  string user_id = 1;
  string product_id = 2;
}

message CreateOrderResponse {
  string order_id = 1;
  string status = 2;
}
